[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comment-downloader"
version = "0.1.0"
description = "A tool to download comments from web pages"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = {file = "README.md"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.21.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.10.0",
]

[tool.setuptools]
[tool.setuptools.packages]
find = { where = ".", include = ["comment_downloader"] }
