[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comment-downloader"
version = "0.2.0"
description = "A tool to download comments from web pages"
authors = [{name = "moon.junseok", email = "moon.junseok@lgdisplay.com.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE", content-type = "text/text"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.21.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.10.0",
    "PySide6>=6.5.0",
    "PyInstaller>=5.0.0",
    "bs4>=4.14.3",
    "requests>=2.33.1"
]

[tool.setuptools]
[tool.setuptools.packages]
find = { where = ["."], include = ["comment_downloader"] }
